# defect_tracker

./: .clang-tidy  .dockerignore  .gitignore  .uncrustify.cfg  CMakeLists.txt  Dockerfile  README.txt  heroku.yml
cmake/: compiler_options.cmake  uninstall.cmake.in
data/scripts/: custom_script.js
data/styles/: custom_style.css  example_style.css
sql/: create_tables.sql  create_test_data.sql  postgresql-recreate_data.sql  sqlite3-recreate_data.sql  test.db
src/: CMakeLists.txt  app.cpp  app.hpp  constants.hpp  coroutine.hpp  main.cpp  main.test.cpp
src/controllers/: auxiliary.cpp  auxiliary.hpp  comment.cpp  comment_controller.cpp  filter.cpp  home.cpp  home.hpp  home.test.cpp  home_controller.cpp  project.cpp  project_controller.cpp  session.cpp  session.hpp  session.test.cpp  ticket.cpp  ticket_controller.cpp  user.cpp  user.hpp  user.test.cpp  user_controller.cpp  user_session.cpp  user_session.hpp  user_session.test.cpp  user_session_controller.cpp
src/models/: _database.cpp  _database.hpp  account.cpp  account.hpp  auxiliary.cpp  auxiliary.hpp  comment.cpp  comment.hpp  notification.cpp  notification.hpp  project.cpp  project.hpp  staff.cpp  staff.hpp  ticket.cpp  ticket.hpp
src/models/generated_postgresql/: account.cpp  account.hpp  comment.cpp  comment.hpp  notification.cpp  notification.hpp  project.cpp  project.hpp  staff.cpp  staff.hpp  ticket.cpp  ticket.hpp
src/models/generated_sqlite3/: account.cpp  account.hpp  comment.cpp  comment.hpp  notification.cpp  notification.hpp  project.cpp  project.hpp  staff.cpp  staff.hpp  ticket.cpp  ticket.hpp
src/tests/: home.test.cpp  project.test.cpp  ticket.test.cpp  user.test.cpp  user_session.test.cpp
src/util/: all.cpp  constants.hpp  core.hpp  cstring_view.hpp  database.cpp  database.hpp  form_error.hpp  hash.hpp  misc.hpp  size.hpp  span.hpp  string.hpp  typedefs.hpp
src/views/: _footer.csp  _header.csp  comment_form.csp  comment_new.csp  home.csp  home_about.csp  home_index.csp  login.csp  project.csp  project_new.csp  project_show.csp  search.csp  signup.csp  ticket.csp  ticket_edit.csp  ticket_form.csp  ticket_new.csp  ticket_show.csp  user.csp  user_form.csp
tools/: create_tables.sql  create_test_data.sql
